Add Details Candidat - this commit has some issues

--- a/WebContent/META-INF/maven/GestInscri/GestInscri/pom.properties
+++ b/WebContent/META-INF/maven/GestInscri/GestInscri/pom.properties
@@ -3,5 +3,5 @@
 version=0.0.1-SNAPSHOT
 groupId=GestInscri
 m2e.projectName=GestInscri
-m2e.projectLocation=C\:\\Users\\ayadi\\workspace\\GestInscri
+m2e.projectLocation=C\:\\Users\\skand\\workspace\\GestInscri
 artifactId=GestInscri
