--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,4 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 WebContent/META-INF/MANIFEST.MF
 WebContent/META-INF/maven/GestInscri/GestInscri/pom.properties
+WebConetnt/uploads/*
