Update Candidat folders views in admin and enseignant section

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ buildNumber.properties
 .mvn/wrapper/maven-wrapper.jar
 WebContent/META-INF/MANIFEST.MF
 WebContent/META-INF/maven/GestInscri/GestInscri/pom.properties
+.classpath
+.settings/*
