--- a/pom.xml
+++ b/pom.xml
@@ -50,6 +50,11 @@
 				<artifactId>hibernate-core</artifactId>
 				<version>5.4.10.Final</version>
 			</dependency>
+			<dependency>
+				<groupId>javax.mail</groupId>
+				<artifactId>mail</artifactId>
+				<version>1.4.7</version>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 </project>
